--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <title> Thomas Lee</title>
-    <link id="favicon" rel="icon" href="_assets/img/favicon.png">
+    <link id="favicon" rel="icon" href="_assets/img/other/favicon.png">
     <meta name="description" content="Personal Portfolio Website">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -14,45 +14,50 @@
             <a class="last-name"><h2>LEE</h2></a>
         </div>
         <div class="social-media">
-            <a class="twitter" href="https://twitter.com/G2SHAS" target="_blank"><img id="twitter-icon" src="_assets/img/socialmedia/twitter.png"></a>
-            <a class="twitch" href="https://www.twitch.tv/shas_o_udas" target="_blank"><img id="twitch-icon" src="_assets/img/socialmedia/twitch.png"></a>
-            <a class="linkedIn" href="https://www.linkedin.com/in/thomas-lee-6197546a/" target="_blank"><img id="linkedIn-icon" src="_assets/img/socialmedia/linkedIn.png"></a>
+            <a class="twitter" href="https://twitter.com/G2SHAS" target="_blank">
+                <img class="top-img" src="_assets/img/socialmedia/Twitter/twitter-white.png">
+                <img class="bottom-img" src="_assets/img/socialmedia/Twitter/twitter-orange.png">
+            </a>
+            <a class="twitch" href="https://www.twitch.tv/shas_o_udas" target="_blank">
+                <img class="top-img" src="_assets/img/socialmedia/Twitch/twitch-white.png">
+                <img class="bottom-img" src="_assets/img/socialmedia/Twitch/twitch-orange.png">
+            </a>
+            <a class="linkedIn" href="https://www.linkedin.com/in/thomas-lee-6197546a/" target="_blank">
+                <img class="top-img" src="_assets/img/socialmedia/LinkedIn/linkedin-white.png">
+                <img class="bottom-img" src="_assets/img/socialmedia/LinkedIn/linkedin-orange.png">
+            </a>
+            <a class="liquipedia" href="https://liquipedia.net/rainbowsix/Shas(O)Udas" target="_blank">
+                <img class="top-img" src="_assets/img/socialmedia/Liquipedia/liquid-white.png">
+                <img class="bottom-img" src="_assets/img/socialmedia/Liquipedia/liquid-orange.png">
+            </a>
+            <a class="email" mailto="shas@g2esports.com">
+                <img class="top-img" src="_assets/img/socialmedia/Email/email-white.png">
+                <img class="bottom-img" src="_assets/img/socialmedia/Email/email-orange.png">
+            </a>
         </div>
         <nav class="nav">
-            <a class="about">ABOUT</a>
-            <a class="gaming">GAMING</a>
+            <a class="about selected">ABOUT</a>
             <a class="engineering">ENGINEERING</a>
+            <a class="gaming">ESPORTS</a>
+            <a class="media">MEDIA</a>
             <a class="resume" href="_assets/CV_Thomas_Lee_Sept_2018.pdf" target="_blank">RESUME</a>
-            <a class="contact">CONTACT</a>
         </nav>
     </header>
     <div class="content-wrapper">
         <section class="side-section">
-            <a class="page-1 visible"><img src="_assets/img/pages.svg"></a>
-            <a class="page-2 visible"><img src="_assets/img/pages.svg"></a>
-            <a class="page-3 hidden"><img src="_assets/img/pages.svg"></a>
+            <a class="page-1 active page-hidden"><img src="_assets/img/pageIcons/pages-orange.png"></a>
+            <a class="page-2 page-hidden"><img src="_assets/img/pageIcons/pages.svg"></a>
+            <a class="page-3 page-hidden"><img src="_assets/img/pageIcons/pages.svg"></a>
         </section>
         <section class="main-section">
+                <img class="entry-img layered" src="_assets/img/other/TomLeeHome.png">
             <div class="main-left">
-                <div class="about-1 visible layered">
-                    <h3>About 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <div class="about-1 hidden layered">
+                    <h3>About Me</h3>
+                    <p>An enthusiastic Aerospace Engineering Graduate from the University of Surrey whom is seeking an engaging and ambitious career. My greatest strengths are being able to learn quickly whilst competently applying new knowledge as well as being a confident, humble person. For the past two years I have been operating as an Esports Coach and Manager whereby my success is predicated on my ability to motivate individuals, establish cohesive teams, develop strategical analysis for “forecasting” and to create flexible multi-faceted plans. It is, by large, an unsupervised role where I am solely responsible for my own decisions, results and tact. </p>
                 </div>
                 <div class="about-2 hidden layered">
                     <h3>About 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-                <div class="gaming-1 hidden layered">
-                    <h3>Gaming 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-                <div class="gaming-2 hidden layered">
-                    <h3>Gaming 2</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
@@ -61,9 +66,21 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
+                <div class="gaming-1 hidden layered">
+                    <h3>My Role:</h3>
+                    <p>Thomas "Shas[O]Udas" Lee is a British Rainbow Six Siege coach AKA "Coach of the Plebs". He is currently coaching and managing for G2 Esports. He started his career with assisting Fenix in qualifying for Y1S2 of Pro League. After the disbanding of Fenix, he joined PENTA Sports on March 2nd, 2017 alongside Fabian and KS. He later joined G2 Esports when the entire PENTA Sports roster got acquired just prior to the Paris Major of 2018.</p>
+                    <p>My role as a Coach and Manager push me beyond the typical attributes of being familiar with the game and understanding its underlying mechanics and current META. I am also required to monitor the physiological health of each of the players and ensure each of them individually and collaboratively have the drive to remain champions. I have had a heavy involvement with the processes the team now employ inside and outside of the game that allows us to compete at such a high level. Previously I was solely responsible for reviewing competitors’ games and collating data for us to use and forecast behaviour with; the addition of Ferral (Daniel Rotheram) to our staff my involvement has moved more towards governing where we look and how to interpret our analytical findings. </p>
+                </div>
+                <div class="gaming-2 hidden layered">
+                    <h3>Gaming 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                </div>
             </div>
             <div class="main-right">
-                <img class="gaming-right" src="_assets/img/imgboarder.png">
+                <div class="gaming-right hidden">
+                    <img class="gaming-right" src="_assets/img/other/imgboarder.png">
+                </div>
             </div>
         </section>
     </div>
