--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
         </div>
         <nav class="nav">
-            <a class="about selected">ABOUT</a>
+            <a class="about">ABOUT</a>
             <a class="engineering">ENGINEERING</a>
             <a class="gaming">ESPORTS</a>
             <a class="media">MEDIA</a>
@@ -50,7 +50,7 @@
             <a class="page-3 page-hidden"><img src="_assets/img/pageIcons/pages.svg"></a>
         </section>
         <section class="main-section">
-                <img class="entry-img layered" src="_assets/img/other/TomLeeHome.png">
+                <img class="entry-img layered visible" src="_assets/img/other/TomLeeHome.png">
             <div class="main-left">
                 <div class="about-1 hidden layered">
                     <h3>About Me</h3>
