--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img class="top-img" src="_assets/img/socialmedia/Liquipedia/liquid-white.png">
                 <img class="bottom-img" src="_assets/img/socialmedia/Liquipedia/liquid-orange.png">
             </a>
-            <a class="email" mailto="shas@g2esports.com">
+            <a class="email" href="mailto:shas@g2esports.com">
                 <img class="top-img" src="_assets/img/socialmedia/Email/email-white.png">
                 <img class="bottom-img" src="_assets/img/socialmedia/Email/email-orange.png">
             </a>
@@ -50,36 +50,79 @@
             <a class="page-3 page-hidden"><img src="_assets/img/pageIcons/pages.svg"></a>
         </section>
         <section class="main-section">
-                <img class="entry-img layered visible" src="_assets/img/other/TomLeeLogo.png">
+            <img class="entry-img layered visible" src="_assets/img/other/TomLeeLogo.png">
+            <div class="engineering-1 layered hidden">
+                <img class="engineering-img" src="_assets/img/sections/engineering/Horizontal.png">
+            </div>
             <div class="main-left">
-                <div class="about-1 hidden layered">
-                    <h3>About Me</h3>
+                <div class="about-1 content-left hidden layered">
+                    <h3>SOMETHING ABOUT ME.</h3>
                     <p>An enthusiastic Aerospace Engineering Graduate from the University of Surrey whom is seeking an engaging and ambitious career. My greatest strengths are being able to learn quickly whilst competently applying new knowledge as well as being a confident, humble person. For the past two years I have been operating as an Esports Coach and Manager whereby my success is predicated on my ability to motivate individuals, establish cohesive teams, develop strategical analysis for “forecasting” and to create flexible multi-faceted plans. It is, by large, an unsupervised role where I am solely responsible for my own decisions, results and tact. </p>
                 </div>
-                <div class="about-2 hidden layered">
-                    <h3>About 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-                <div class="engineering-1 hidden layered">
-                    <h3>Engineering 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-                <div class="gaming-1 hidden layered">
-                    <h3>My Role:</h3>
+                <div class="gaming-1 content-left hidden layered">
+                    <h3>MY ROLE IN ESPORTS.</h3>
                     <p>Thomas "Shas[O]Udas" Lee is a British Rainbow Six Siege coach AKA "Coach of the Plebs". He is currently coaching and managing for G2 Esports. He started his career with assisting Fenix in qualifying for Y1S2 of Pro League. After the disbanding of Fenix, he joined PENTA Sports on March 2nd, 2017 alongside Fabian and KS. He later joined G2 Esports when the entire PENTA Sports roster got acquired just prior to the Paris Major of 2018.</p>
                     <p>My role as a Coach and Manager push me beyond the typical attributes of being familiar with the game and understanding its underlying mechanics and current META. I am also required to monitor the physiological health of each of the players and ensure each of them individually and collaboratively have the drive to remain champions. I have had a heavy involvement with the processes the team now employ inside and outside of the game that allows us to compete at such a high level. Previously I was solely responsible for reviewing competitors’ games and collating data for us to use and forecast behaviour with; the addition of Ferral (Daniel Rotheram) to our staff my involvement has moved more towards governing where we look and how to interpret our analytical findings. </p>
                 </div>
-                <div class="gaming-2 hidden layered">
-                    <h3>Gaming 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <div class="gaming-2 content-left hidden layered">
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/G2.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Six Major Paris</h3></a>
+                            <a class="event-date"><p>2018/08/19 - $150,000</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Gold.png">
+                    </div>
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/PENTA.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Pro League Season 7 - Finals</h3></a>
+                            <a class="event-date"><p>2018/05/20 - $30,000</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Silver.png">
+                    </div>
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/PENTA.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Six Invitational 2018</h3></a>
+                            <a class="event-date"><p>2018/02/18 - $200,000</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Gold.png">
+                    </div>
                 </div>
             </div>
             <div class="main-right">
-                <div class="gaming-right hidden">
-                    <img class="gaming-right" src="_assets/img/other/imgboarder.png">
+                <div class="about-1-right content-right hidden layered">
+                    <img src="_assets/img/sections/about/tom-grad2.png">
+                </div>
+                <div class="gaming-1-right content-right hidden layered">
+                    <img src="_assets/img/sections/esports/imgboarder.png">
+                </div>
+                <div class="gaming-2-right content-right hidden layered">
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/PENTA.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Pro League Year 2 Season 3 - Finals</h3></a>
+                            <a class="event-date"><p>2017/11/19 - $16,142</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Bronze.png">
+                    </div>
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/PENTA.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Pro League Year 2 Season 2 - Finals</h3></a>
+                            <a class="event-date"><p>2017/08/26 - $75,000</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Gold.png">
+                    </div>
+                    <div class="event">
+                        <img class="org-img" src="_assets/img/sections/esports/PENTA.png">
+                        <div class="event-info">
+                            <a class="event-name"><h3>Pro League Year 2 Season 1 - Finals</h3></a>
+                            <a class="event-date"><p>2017/05/21 - $75,000</p></a>
+                        </div>
+                        <img class="result-img" src="_assets/img/sections/esports/Gold.png">
+                    </div>
                 </div>
             </div>
         </section>
