--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="media-1 layered hidden">
                 <div class="media-1-left">
                     <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/_q9y9BtF55c?color=white&rel=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="ytplayer" class="ytVid" type="text/html"  src="https://www.youtube.com/embed/_q9y9BtF55c?color=white&rel=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="media-1-right">
@@ -185,7 +185,7 @@
                         </p>
                     </div>
                     <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" width="560" height="315" src="https://www.youtube.com/embed/cSDWcS5pvd0?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="ytplayer2" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cSDWcS5pvd0?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="media-2-right">
@@ -199,7 +199,7 @@
                         </p>
                     </div>
                     <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" width="560" height="315" src="https://www.youtube.com/embed/cwcoEJVA15U?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="ytplayer2" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cwcoEJVA15U?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
