Formatting for Desktop users
Esports section:
- Page 1 Image slider adjusted
- Trophy page updated

Media section:
- Removed sectioning line in middle
- Page 1, swapped content and video size/alignment
- Page 2 Alignement of content + sizing
- Page 3 Alignement of content + sizing

--- a/index.html
+++ b/index.html
@@ -151,11 +151,6 @@
             </div>
             <div class="media-1 layered hidden">
                 <div class="media-1-left">
-                    <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" src="https://www.youtube.com/embed/_q9y9BtF55c?color=white&rel=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="media-1-right">
                     <div class="media-title">
                         <h2>RAINBOW SIX: SIEGE</h2>
                         <h3>ANOTHER MINDSET</h3>
@@ -171,6 +166,11 @@
                             Thomas "Shas" Lee is a British Rainbow Six Siege player and the head coach for team Penta Sports which he joined at the end of 2017. He is the very first full-time coach of the Rainbow Six Siege scene and is widely recognized as one of the key components to the team's success. To this day, with him as a coach, the team attended every Pro League finals, won 2 and claimed a title of world champion at the Six Invitational 2018.
                         </p>
                     </div>
+                </div>
+                <div class="media-1-right">
+                    <div class="media-content">
+                            <iframe id="ytplayer" class="ytVid" type="text/html" src="https://www.youtube.com/embed/_q9y9BtF55c?color=white&rel=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div>    
             </div>
             <div class="media-2 layered hidden">
@@ -185,7 +185,7 @@
                         </p>
                     </div>
                     <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cSDWcS5pvd0?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="ytplayer2" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cSDWcS5pvd0?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="media-2-right">
@@ -199,7 +199,7 @@
                         </p>
                     </div>
                     <div class="media-content">
-                        <iframe id="ytplayer" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cwcoEJVA15U?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="ytplayer2" class="ytVid" type="text/html" src="https://www.youtube.com/embed/cwcoEJVA15U?color=white&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -271,9 +271,9 @@
                         <img class="org-img" src="_assets/img/sections/esports/G2.svg">
                         <div class="event-info">
                             <a class="event-name"><h3>Six Invitational 2019</h3></a>
-                            <a class="event-date"><p>CANADA - MONTREAL - 2019/02/11 - Prize pool: $1,000,000+</p></a>
+                            <a class="event-date"><p>CANADA - MONTREAL - 2019/02/11 - Prize pool: $800,000</p></a>
                         </div>
-                        <h2 class="result-img">?</h2>
+                        <img class="result-img" src="_assets/img/sections/esports/Gold.svg">
                     </div>
                     <div class="event">
                         <img class="org-img" src="_assets/img/sections/esports/G2.svg">
